tests/NormalTests/paczka2/big_fuzzy/18440138.err
Error in line 10: SSC A291 2,8
Error in line 11: SSC S11 16,8
Error in line 17: SSC A88 04,7
Error in line 13: SSC A88 1,7
Error in line 21: A88 A88 53,4
Error in line 30: ObMvxZdRlsu A291 66,6
Error in line 33: 6FSO A88 215,2
Error in line 39: A88 S465 284,6
Error in line 52: ObMvxZdRlsu A291 98,8
Error in line 65: BC2dwM S11 40,6
Error in line 87: A88 A291 47,6
Error in line 103: ukjhisUz9KV S465 47,7
Error in line 104: 6FSO S11 50,2
Error in line 119: A88 A88 49,22
Error in line 126: ukjhisUz9KV A291 2,4
Error in line 116: A88 S11 68,2
Error in line 136: SSC A291 21,6
Error in line 141: gWu S11 -4,5
Error in line 128: ukjhisUz9KV S465 79,1
Error in line 145: 6FSO A88 88,0
Error in line 142: ObMvxZdRlsu S465 36,6
Error in line 129: A88 A88 231,7
Error in line 158: A88 S11 83,5
Error in line 156: 6FSO A88 77,8
Error in line 164: 6FSO A291 42,0
Error in line 173: 6FSO A88 7,2
Error in line 186: ukjhisUz9KV S465 21,3
Error in line 169: gWu S11 53,9
Error in line 194: gWu A291 75,1
Error in line 202: 6FSO S465 2,5
Error in line 206: SSC S465 4,5
Error in line 213: ukjhisUz9KV S11 42,0
Error in line 212: gWu A291 52,4
Error in line 204: 6FSO S11 95,5
Error in line 229: 6FSO S465 87,7
Error in line 236: ukjhisUz9KV S465 37,4
Error in line 240: A88 S465 99,9
